k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexia-empire
  labels:
    name: nexia-empire
    project: empire-dashboard
    owner: ludovic-pilet
